force-app/main/default/objects/VCG_CPQ_Product_Rule__c/VCG_CPQ_Product_Rule__c.object-meta.xml
<CustomObject>
    <label>VCG CPQ Product Rule</label>
    <nameField>
        <displayFormat>PR-{000}</displayFormat>
        <label>VCG CPQ Product Rule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>VCG CPQ Product Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>