force-app/main/default/objects/VCG_CPQ_Product_Rule__c/fields/Ceiling__c.field-meta.xml
<CustomField>
    <fullName>Ceiling__c</fullName>
    <label>Ceiling</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>