force-app/main/default/objects/VCG_CPQ_Product_Rule__c/fields/Condition__c.field-meta.xml
<CustomField>
    <fullName>Condition__c</fullName>
    <inlineHelpText>Required CPQ formula. Should return a true value (from a boolean test result or a decimal &quot;1&quot;) if this rule should be evaluated. Enter &quot;1&quot; (without quotes) if rule should always be evaluated. This formula is evaluated against the Quote record.</inlineHelpText>
    <label>Condition</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>