force-app/main/default/objects/VCG_CPQ_Product_Rule__c/fields/Depends_On__c.field-meta.xml
<CustomField>
    <fullName>Depends_On__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Depends On</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>VCG CPQ Product Rules (Depends On)</relationshipLabel>
    <relationshipName>VCG_CPQ_Product_Rules1</relationshipName>
    <type>Lookup</type>
</CustomField>