force-app/main/default/objects/VCG_CPQ_Product_Rule__c/fields/Floor__c.field-meta.xml
<CustomField>
    <fullName>Floor__c</fullName>
    <label>Floor</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>