force-app/main/default/objects/VCG_CPQ_Product_Rule__c/fields/Increment__c.field-meta.xml
<CustomField>
    <fullName>Increment__c</fullName>
    <label>Increment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>