force-app/main/default/objects/VCG_CPQ_Product_Rule__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>VCG CPQ Product Rules</relationshipLabel>
    <relationshipName>VCG_CPQ_Product_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>