force-app/main/default/objects/VCG_CPQ_Product_Rule__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Scope__c</columns>
    <columns>Product__c</columns>
    <columns>Depends_On__c</columns>
    <columns>Option_Group__c</columns>
    <columns>Quantity_Group__c</columns>
    <columns>Ceiling__c</columns>
    <columns>Floor__c</columns>
    <columns>Increment__c</columns>
    <columns>Condition__c</columns>
    <columns>Needs_Fields__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>